# Ark

./: README.md  WORKSPACE
protos/: BUILD.bazel  ark.proto
src/: BUILD.bazel  ark.proto  worker.cpp
